# PyScada-EMS

./: .gitignore  AUTHORS  MANIFEST.in  README.rst  pyproject.toml  setup.py
pyscada/ems/: __init__.py  admin.py  apps.py  daemon.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
pyscada/ems/management/commands/: precalculate.py
pyscada/ems/migrations/: 0001_add_device_protocol.py  0002_initial.py  0003_rename_calulatedmeteringpointenergydelta_calculatedmeteringpointenergydelta_and_more.py  0004_attachmentgroup_attachment_groups.py  0005_alter_attachment_groups.py  0006_energyreadingtariffregister_and_more.py  0007_energyreadingcomment.py  0008_dataexport.py  0009_rename_interval_length_calculatedmeteringpointenergydelta_interval_and_more.py
pyscada/ems/templates/: ems_form.html  ems_form_submit.html
