[build-system]
requires = ["setuptools>=61.0.0,<69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyScada-ems"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "pyscada>=0.8.0",
    "pytz",
    "XlsxWriter>=3.2.0"
]
authors = [
  {name = "Martin Schröder", email = "team@pyscada.org"},
]
description = "EMS extension for PyScada a Python and Django based Open Source SCADA System"
readme = "README.rst"
license = {text = "AGPLv3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Visualization",
]


[project.urls]
Homepage = "https://www.pyscada.org/"
Documentation = "https://pyscada.readthedocs.io"
Source = "https://github.com/pyscada/pyscada-ems"
Tracker = "https://github.com/pyscada/pyscada-ems/issues"

[tool.black]
target-version = ["py310"]
force-exclude = "tests/test_runner_apps/tagged/tests_syntax_error.py"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "pyscada"

[tool.setuptools.dynamic]
version = {attr = "pyscada.ems.__version__"}

[tool.setuptools.packages.find]
include = ["pyscada*"]
